# TrajectorySolver

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
scripts/: extended_falcon.py  run_falcon.py  test_start_datetime.py  visualize_cloud.py
src/trajsolver/: __init__.py  coord_detection.py  core.py  tools.py  visualization.py
tests/: test_coord_detection.py  test_numerics.py  test_visualization.py
