[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trajsolver"
version = "0.1.0"
description = "Lagrangian ensemble trajectory solver for atmospheric wind fields"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["lagrangian", "trajectory", "atmosphere", "wind"]
dependencies = [
    "numpy>=1.26",
    "xarray>=2024.1",
    "scipy>=1.12",
    "pandas>=2.0",
    "dask[array]>=2024.1",
    "pyproj>=3.6",
    "joblib>=1.2",
    "python-dateutil>=2.8",
    "cartopy>=0.22,<0.25",
    "matplotlib>=3.8,<3.11",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]
cloud = [
    "pyvista>=0.43",
    "Pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
